minor wording change to test prompt; restricted browser to chrome/firefox

--- a/experiments/04_cat/cat.html
+++ b/experiments/04_cat/cat.html
@@ -54,12 +54,11 @@
   <div class="slide" id="i0">
     <img src="_shared/images/stanford.png" alt="Stanford University" id="logo"></img>
     <p id="langcoglab">Stanford Language and Cognition Lab</p>
-    <p id="instruct-text">In this game, we're interested
-      in your decision making when you come across some new toys.
-      <br><br>
-      The HIT should take less than 5 minutes.
-      <br>
-      Please pay attention, thanks!</p>
+    <p id="instruct-text">We're interested in your decision making when you come
+      across some new toys. <br><br>
+      This HIT should take less than 5 minutes. Please pay attention, thanks!
+    </p>
+    <p id="init_msg"></p>
     <button id="start_button" type="button">Start Experiment</button>
     <p id="legal">
       By answering the following
@@ -75,7 +74,7 @@
       consequences. Your anonymity is assured; the researchers who
       have requested your participation will not receive any personal
       information about you.
-      <br>
+
       We have recently been made aware that your public
       <a href="http://www.amazon.com">Amazon.com</a>
       profile can be accessed via your worker ID
@@ -88,7 +87,8 @@
   </div>
 
   <div class="slide" id="sound_test">
-    <audio id="sound_player_check"><source src="media/shoe_find.mp3" type="audio/mpeg"></audio>
+    <audio id="sound_player_check">
+      <source src="media/shoe_find.mp3" type="audio/mpeg"></audio>
     <p>We will first begin with a sound test to confirm working audio.</p>
     <p><b>Please make sure that your computer's sound is at an appropriate volume.</b></p>
     <p>To play the sound, press the button below.</p>
@@ -123,7 +123,8 @@
   </div>
 
   <div class="slide" id="toy_training_trial">
-    <audio id="sound_player"><source src="media/song1_trim.mp3" type="audio/mpeg"></audio>
+    <audio id="sound_player">
+      <source src="media/song1_trim.mp3" type="audio/mpeg"></audio>
     <p id="toy_select_prompt"></p>
     <br>
     <div class="row">
