--- a/experiments/04_cat/cat.html
+++ b/experiments/04_cat/cat.html
@@ -4,31 +4,31 @@
   <title>Toy Game</title>
 
   <!-- Bootstrap -->
-  <link href="_shared/css/bootstrap.min.css" rel="stylesheet">
+  <link href="shared/css/bootstrap.min.css" rel="stylesheet">
 
   <!--CSS-->
-  <link href="_shared/css/langcog-style.css" rel="stylesheet" type="text/css" />
+  <link href="shared/css/langcog-style.css" rel="stylesheet" type="text/css" />
   <link href="css/local-style.css" rel="stylesheet" type="text/css" />
 
   <!--JS-->
 
   <!-- external general utilities -->
-  <script src="_shared/js/jquery-1.11.1.min.js "></script>
-  <script src="_shared/full-projects/jquery-ui/jquery-ui.min.js"></script>
-  <script src="_shared/js/underscore-min.js"></script>
+  <script src="shared/js/jquery-1.11.1.min.js "></script>
+  <script src="shared/full-projects/jquery-ui/jquery-ui.min.js"></script>
+  <script src="shared/js/underscore-min.js"></script>
   <!-- if you want to draw stuff: -->
-  <!-- <script src="_shared/js/raphael-min.js"></script> -->
+  <!-- <script src="shared/js/raphael-min.js"></script> -->
 
   <!-- lab experiment logic -->
-  <script src="_shared/js/exp-V2.js"></script>
-  <script src="_shared/js/stream-V2.js"></script>
+  <script src="shared/js/exp-V2.js"></script>
+  <script src="shared/js/stream-V2.js"></script>
 
   <!-- lab general utilities -->
-  <script src="_shared/js/mmturkey.js "></script>
-  <script src="_shared/js/browserCheck.js"></script>
-  <script src="_shared/js/utils.js"></script>
+  <script src="shared/js/mmturkey.js "></script>
+  <script src="shared/js/browserCheck.js"></script>
+  <script src="shared/js/utils.js"></script>
   <!-- if you want to draw cute creatures (depends on raphael): -->
-  <!-- <script src="_shared/js/ecosystem.js"></script> -->
+  <!-- <script src="shared/js/ecosystem.js"></script> -->
 
   <!-- experiment specific helper functions -->
   <script src="js/local-utils.js"></script>
@@ -52,7 +52,7 @@
   </div> -->
 
   <div class="slide" id="i0">
-    <img src="_shared/images/stanford.png" alt="Stanford University" id="logo"></img>
+    <img src="shared/images/stanford.png" alt="Stanford University" id="logo"></img>
     <p id="langcoglab">Stanford Language and Cognition Lab</p>
     <p id="instruct-text">We're interested in your decision making when you come
       across some new toys. <br><br>
